[package]
name = "torn-map-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
image = { version = "0.24.6", default-features = false, features = ["tiff", "png"] }
usvg = "0.35.0"
torn-territories = { version = "0.1.0", path = "../torn-territories" }
