[package]
name = "torn-territories"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde"]
sqlx = ["dep:sqlx"]
sea-orm = ["dep:sea-orm"]

[dependencies]
image = { version = "0.24.6", default-features = false, features = ["tiff"] }
phf = "0.11.1"
phf_shared = "0.11.1"
resvg = { version = "0.35.0", default-features = false }
rust-embed = { version = "6.8.1", features = ["include-exclude"] }
svgtypes = "0.11.0"
serde = { version = "1", optional = true, default-features = false }
sqlx = { version = "0.7", optional = true, default-features = false }
sea-orm = { version = "0.12", optional = true, default-features = false }

[build-dependencies]
phf = "0.11.1"
phf_codegen = "0.11.1"
phf_shared = "0.11.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0"
svgtypes = "0.11.0"
usvg = "0.34.1"

[dev-dependencies]
serde_json = "1.0"
